tests/ui/asm/issue-99122.stderr
error[E0641]: cannot cast to a pointer of an unknown kind
  --> $DIR/issue-99122.rs:5:27
   |
LL |     let pointer = 1u32 as *const _;
   |                           ^^^^^^^^ needs more type information
   |
   = note: the type information given here is insufficient to check whether the pointer cast is valid

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0641`.
